<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="2"
    tools:context="co.edu.ucc.iotandroid.ControlActivity">


    <Button
        android:id="@+id/btnSala"
        android:layout_width="160dp"
        android:layout_height="230dp"
        android:layout_column="0"
        android:layout_row="0"
        android:background="@color/colorPrimaryLight"
        android:text="@string/sala" />

    <Button
        android:id="@+id/btnHabitacion"
        android:layout_width="160dp"
        android:layout_height="230dp"
        android:layout_column="1"
        android:layout_marginStart="15dp"
        android:layout_row="0"
        android:background="@color/colorPrimaryLight"
        android:text="@string/Habitacion" />

    <Button
        android:id="@+id/btnCocina"
        android:layout_width="160dp"
        android:layout_height="230dp"
        android:layout_column="0"
        android:layout_marginTop="15dp"
        android:layout_row="1"
        android:background="@color/colorPrimaryLight"
        android:text="@string/cocina" />

    <Button
        android:id="@+id/btnBano"
        android:layout_width="160dp"
        android:layout_height="230dp"
        android:layout_column="1"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_row="1"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="@string/bano" />


</GridLayout>